[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/bosses/slowing_poison.png" type="Texture" id=1]
[ext_resource path="res://scripts/misc/SlowingPoison.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/poison_smoke_particle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8.81922 )

[sub_resource type="CircleShape2D" id=2]
radius = 193.402

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.0
angular_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 2.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="SlowingPoison" type="Area2D"]
position = Vector2( 63.038, 65.157 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.18078 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["SlowingPoison"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true

[node name="SlowPoisonParticle" type="Particles2D" parent="."]
scale = Vector2( 3, 3 )
amount = 200
lifetime = 0.75
explosiveness = 0.25
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Spin = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
